2007-05-17  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/NewStuff.cs:
	Fixed bug that prevented to update chached repository

2007-05-17  Sebastian Pölsterl  <marduk@k-d-w.org>

	* examples/testapp.py:
 	Fixed bug that caused program to exit too early

2007-05-17  Sebastian Pölsterl  <marduk@k-d-w.org>

	* examples/DownloadManager.py
	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/NewStuff.cs
	* src/libnsm/DownloadManager.cs:
	Removed "action" parameter for DownloadManagerStatus event

2007-05-17  Sebastian Pölsterl  <marduk@k-d-w.org>

	* examples/DownloadManager.py:
	Added an example that implements a small
	download manager

2007-04-28  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/DownloadManager.cs
	* src/libnsm/NewStuff.cs:
	Added D-Bus interface for DownloadManager.
	Changed events for NewStuff.

2007-04-27  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/NewStuffManager.cs
	* src/libnsm/NewStuff.cs:
	Added interfaces for D-Bus objects and
	removed subclassing of MarshalByRefObject.
	D-Bus signals work know correctly.

2007-04-26  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/FtpDownloader.cs:
	Added functionality to donwload from a FTP server.
	Resuming and showing download progress is still missing.

2007-04-18  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/DownloadManager.cs
	* src/libnsm/Download.cs:
	Checking and extracting files now works

2007-04-18  Sebastian Pölsterl  <marduk@k-d-w.org>

	* dbus-sharp/*
	* configure.ac:
	Set required dbus-sharp version to 0.5.2,
	because previous releases aren't thread-safe

2007-04-18  Sebastian Pölsterl  <marduk@k-d-w.org>

	* examples/DBusTester.py
	* examples/testapp.cs
	* examples/testapp.py:
	Added examples from the tutorial.
