@@ -1,0 +1,8 @@
+examplesdir = $(docdir)/examples
+examples_DATA = \
+	DownloadManager.py \
+	testapp.cs \
+	testapp.py
+
+EXTRA_DIST = \
+	$(examples_DATA)
